<resources>
    <string name="app_name">Pending Case</string>
    <string name="pending_cases">Pending cases</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="Theme">Color theme</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="tittlePendingDialog">Enter tour pending cases</string>
    <string name="delete">Delete</string>
    <string name="view_all_the_information">View all the information</string>
    <string name="brief_description">Brief description</string>
    <string name="full_description">Full description</string>
    <string name="do_not_enter_anything">Provide at least a brief description</string>
    <string name="Russian">Russian</string>
    <string name="English">English</string>
    <string name="dark_theme">Dark</string>
    <string name="light_theme">Light</string>
    <string name="apply">Apply</string>
    <string name="requires_restarting_app_for_change_theme">Changing the theme requires restarting the app</string>
    <string name="aboutApp">About the app</string>
    <string name="appDescription">We all sometimes have things that we want to postpone for later in life.
        This app is designed to store them.
        Contact information: tol1017@ya.ru</string>
    <string name="Description">Description:</string>
    <string name="your_pending_case">Your pending case</string>
    <string name="installData">Installation date</string>
    <string name="add_pending_case">Add pending case</string>
    <string name="list_of_cases">List of cases</string>

</resources>
