<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="350dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_ver_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.36" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_hor_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.68" />


    <TextView
        android:id="@+id/title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/tittlePendingDialog"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:maxLength="25"
        android:background="@drawable/style_underline_edit_text"
        android:textSize="14sp"
        android:textColor="?android:attr/textColor"
        app:layout_constraintBottom_toTopOf="@+id/gl_hor_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.233">

    </EditText>

    <TextView
        style="?android:attr/textViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/brief_description"

        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintStart_toStartOf="@+id/editText">

    </TextView>

    <EditText
        android:id="@+id/editText2"
        android:gravity="start|top"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:textColor="?android:attr/textColor"
        android:layout_marginEnd="8dp"
        android:background="@drawable/style_underline_edit_text"
        app:layout_constraintBottom_toTopOf="@+id/gl_hor_2"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="1.0">

    </EditText>

    <TextView
        style="?android:attr/textViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/full_description"

        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintStart_toStartOf="@+id/editText2">

    </TextView>

    <Button
        android:id="@+id/NoBtn"
        style="@style/btnDialog"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gl_ver_2"
        app:layout_constraintTop_toTopOf="@+id/gl_hor_2" />

    <Button
        android:id="@+id/YesBtn"
        style="@style/btnDialog"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toEndOf="@+id/NoBtn"
        app:layout_constraintTop_toTopOf="@+id/gl_hor_2" />

</androidx.constraintlayout.widget.ConstraintLayout>