<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?android:attr/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        style="?android:attr/textViewStyle"
        android:text="@string/settings"
        android:fontFamily="serif"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_hor_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/LanguageConstraint"
    android:layout_width="200dp"
    android:layout_height="60dp"
    app:layout_constraintBottom_toTopOf="@+id/gl_hor_1"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.1"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView"
    app:layout_constraintVertical_bias="0.5">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/language"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic__language">
    </ImageView>

    <TextView
        android:id="@+id/language"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/language"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_hor_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ColorConstraint"
        android:layout_width="200dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@+id/gl_hor_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl_hor_1"
        app:layout_constraintVertical_bias="0.5">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/Theme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_for_color_theme">

        </ImageView>
        <TextView
            android:id="@+id/theme"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/Theme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_hor_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/aboutApp"
        android:layout_width="200dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@+id/gl_hor_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl_hor_2"
        app:layout_constraintVertical_bias="0.5">
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/aboutApp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_info_ab_app">

        </ImageView>

        <TextView
            android:id="@+id/aboutAppTV"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/aboutApp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_hor_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />


    <TextView
        android:id="@+id/tittleAbApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/aboutApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl_hor_3"
        android:visibility="invisible">

    </TextView>

    <TextView
        android:id="@+id/briefAbbApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/gl_hor_4"
        android:text="@string/appDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tittleAbApp"
        app:layout_constraintVertical_bias="0.0"
        android:visibility="invisible">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>